update - update video and get ranking
